# soba

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  config.json.example  requirements.txt
core/: CMakeLists.txt  config.py
core/cpp/: geometry.h  main.cpp  main.py  optix_programs.cu  optix_solar.cu  optix_solar.h  python_bindings.cpp  vec3.h
core/python/: engine.py  pipeline.py  server.py  usd_io.py  weather.py
core/server/: server copy.py  server.py
integrations/maya/: SolarUI.ui
integrations/maya/python/: client.py  get_server_ip.py  solar_ui.py  usd_exporter.py
